# repo-statistics

./: .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  Justfile  README.md  metrics.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml
repo_statistics/: __init__.py  ai_detection.py  churn.py  classification.py  commits.py  complexity.py  constants.py  contributors.py  documentation.py  gini.py  main.py  platform.py  source.py  static_analysis.py  timeseries.py  utils.py
repo_statistics/data/: __init__.py
repo_statistics/tests/: test_smoke.py
